# RollingOHLC-Rust

./: FLOW_OF_SOLUTION.MD  README.md  SOLUTION.MD
rolling_ohlc/: Cargo.toml
rolling_ohlc/src/: lib.rs  main.rs
rolling_ohlc_program/: Cargo.toml
rolling_ohlc_program/data/output/: ohlc-5m-a_output.txt
rolling_ohlc_program/src/: main.rs
