[package]
name = "rolling_ohlc_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ordered-float = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rolling_ohlc = { version = "0.1", path = "../rolling_ohlc" }